[gd_scene load_steps=3 format=2]

[ext_resource path="res://Setting.gd" type="Script" id=1]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.901961, 0.831373, 0.831373, 1 )

[node name="Setting" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -200.0
margin_right = 256.0
margin_bottom = 200.0

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 512.0
margin_bottom = 400.0
rect_min_size = Vector2( 512, 400 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
margin_right = 492.0
margin_bottom = 380.0

[node name="TabContainer" type="TabContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 492.0
margin_bottom = 380.0
size_flags_vertical = 3
tab_align = 0

[node name="Video" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_vertical = 3

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video"]
margin_right = 484.0
margin_bottom = 1.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video"]
margin_top = 5.0
margin_right = 484.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video/HBoxContainer"]
margin_top = 8.0
margin_right = 240.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video/HBoxContainer"]
margin_left = 244.0
margin_right = 484.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video"]
margin_top = 39.0
margin_right = 484.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video"]
margin_top = 44.0
margin_right = 484.0
margin_bottom = 68.0

[node name="FullRect" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video/HBoxContainer2"]
margin_top = 5.0
margin_right = 456.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "FullRect"

[node name="FullRectbut" type="CheckBox" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video/HBoxContainer2"]
margin_left = 460.0
margin_right = 484.0
margin_bottom = 24.0

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video"]
margin_top = 72.0
margin_right = 484.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video"]
margin_top = 77.0
margin_right = 484.0
margin_bottom = 101.0

[node name="Borderless" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video/HBoxContainer3"]
margin_top = 5.0
margin_right = 456.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Borderless"

[node name="Borderlessbut" type="CheckBox" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video/HBoxContainer3"]
margin_left = 460.0
margin_right = 484.0
margin_bottom = 24.0

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video"]
margin_top = 105.0
margin_right = 484.0
margin_bottom = 106.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="Music" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music"]
margin_right = 484.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )
custom_styles/panel = SubResource( 1 )

[node name="Master" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music"]
margin_top = 6.0
margin_right = 484.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="lable" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/Master"]
margin_top = 8.0
margin_right = 240.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Master"

[node name="HBox" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/Master"]
margin_left = 244.0
margin_right = 484.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/Master/HBox"]
margin_right = 196.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0

[node name="num_m" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/Master/HBox"]
margin_left = 200.0
margin_top = 8.0
margin_right = 240.0
margin_bottom = 22.0
rect_min_size = Vector2( 40, 0 )
text = "0"
align = 1
valign = 1

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music"]
margin_top = 40.0
margin_right = 484.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 2 )
custom_styles/panel = SubResource( 1 )

[node name="Music" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music"]
margin_top = 46.0
margin_right = 484.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="Music" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/Music"]
margin_top = 8.0
margin_right = 240.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Music"

[node name="Master2" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/Music"]
margin_left = 244.0
margin_right = 484.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Music" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/Music/Master2"]
margin_right = 196.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0

[node name="num_Music" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/Music/Master2"]
margin_left = 200.0
margin_top = 8.0
margin_right = 240.0
margin_bottom = 22.0
rect_min_size = Vector2( 40, 0 )
text = "0"
align = 1
valign = 1

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music"]
margin_top = 80.0
margin_right = 484.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 2 )
custom_styles/panel = SubResource( 1 )

[node name="SoundFX" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music"]
margin_top = 86.0
margin_right = 484.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="SoundFX" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/SoundFX"]
margin_top = 8.0
margin_right = 240.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "SoundFX"

[node name="HBox" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/SoundFX"]
margin_left = 244.0
margin_right = 484.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="SoundFX" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/SoundFX/HBox"]
margin_right = 196.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/SoundFX/HBox"]
margin_left = 200.0
margin_top = 8.0
margin_right = 240.0
margin_bottom = 22.0
rect_min_size = Vector2( 40, 0 )
text = "0"
align = 1
valign = 1

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music"]
margin_top = 120.0
margin_right = 484.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 2 )
custom_styles/panel = SubResource( 1 )

[node name="Button" type="Button" parent="MarginContainer/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
rect_min_size = Vector2( 60, 30 )
text = "Exit"

[connection signal="item_selected" from="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video/HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video/HBoxContainer2/FullRectbut" to="." method="_on_FullRectbut_toggled"]
[connection signal="toggled" from="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Video/HBoxContainer3/Borderlessbut" to="." method="_on_Borderlessbut_toggled"]
[connection signal="value_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/Master/HBox/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/Music/Master2/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Music/SoundFX/HBox/SoundFX" to="." method="_on_SoundFX_value_changed"]
[connection signal="pressed" from="MarginContainer/Panel/Button" to="." method="_ResponsibleForDisplay" binds= [ 0 ]]
